Закончил главную страницу Mobile Tablet Desktop

--- a/source/pug/blocks/footer.pug
+++ b/source/pug/blocks/footer.pug
@@ -3,7 +3,9 @@ footer.footer
     .footer__content
       a.footer__logo(href='index.html')
         picture
-          img.logo__img(src="img/logo-mobile-blue@1x.png" width="96" height="15" alt="Логотип Погнали")
+          source.footer__logo-tablet(media="(min-width: 768px)", srcset="img/logo-tablet-blue@1x.png", type="image/png")
+          source.footer__logo-desktop(media="(min-widths: 1440px)", srcset="img/logo-desktop-blue@1x.png", type="image/png")
+          img.footer__logo-img(src="img/logo-mobile-blue@1x.png" width="96" height="15" alt="Логотип Погнали")
 
       .footer__socials
         a.footer__socials-link.footer__socials-link--facebook(href='https://facebook.com')
