--- a/source/pug/blocks/index/2_destinations.pug
+++ b/source/pug/blocks/index/2_destinations.pug
@@ -20,12 +20,14 @@ section.destanation
       @String description
       @Number people
       @String modificator
-      @String imageLink
+      @String image Link Mobile
+      @String image Link Tablet
+      @String image Link Desktop
 
     .destanation__cards
-      +destination-card('Таиланд', 'Джунгли зовут!', 18321, 'thailand', 'img/thailand-mobile@1x.jpg')
-      +destination-card('Франция', 'Трэ бьен, манифик!', 12518, 'france', 'img/france-mobile@1x.jpg')
-      +destination-card('Чехия', 'Закоулки старой Европы', 5326, 'czech', 'img/czech-mobile@1x.jpg')
+      +destination-card('Таиланд', 'Джунгли зовут!', 18321, 'thailand', 'img/thailand-mobile@1x.jpg', 'img/thailand-desktop@1x.jpg', 'img/thailand-desktop@1x.jpg')
+      +destination-card('Франция', 'Трэ бьен, манифик!', 12518, 'france', 'img/france-mobile@1x.jpg', 'img/france-desktop@1x.jpg', 'img/france-desktop@1x.jpg')
+      +destination-card('Чехия', 'Закоулки старой Европы', 5326, 'czech', 'img/czech-mobile@1x.jpg', 'img/czech-desktop@1x.jpg', 'img/czech-desktop@1x.jpg')
 
     a.section-btn.destanation__btn(href='catalog.html') Показать все
 
