--- a/source/pug/blocks/index/3_companions.pug
+++ b/source/pug/blocks/index/3_companions.pug
@@ -25,7 +25,7 @@ section.companions
         'Таня Фирсова',
         'offline',
         {
-          'sri-lanka': 'Шри Ланка',
+          'sri-lanka': 'ШриЛанка',
           'thailand': 'Тайланд',
           'seychelles': 'Сейшелы'
         },
@@ -42,7 +42,7 @@ section.companions
         'Петя Демин',
         'online',
         {
-          'germany': 'Германия',
+          'belgium': 'Бельгия',
           'czech': 'Чехия'
         },
         ['#бургер', '#бар', '#футбол', '#концерт', '#крафт'],
