--- a/source/pug/blocks/header.pug
+++ b/source/pug/blocks/header.pug
@@ -2,7 +2,9 @@ header.header
   .wrapper.header__wrapper
     a.header__logo
       picture
-        img.logo__img(src="img/logo-mobile-white@1x.png" width="100" height="19" alt="Логотип Погнали")
+        source.header__logo-tablet(media="(min-width: 768px)", srcset="img/logo-tablet-white@1x.png", type="image/png")
+        source.header__logo-desktop(media="(min-widths: 1440px)", srcset="img/logo-desktop-white@1x.png", type="image/png")
+        img.header__logo-img(src="img/logo-mobile-white@1x.png" width="100" height="19" alt="Логотип Погнали")
 
     button.header__nav-btn(type='button') Мобильная навигация
 
