--- a/source/pug/blocks/index/1_service.pug
+++ b/source/pug/blocks/index/1_service.pug
@@ -8,6 +8,9 @@ section.service
         | с попутчиками, которые на
         br
         | одной волне с тобой! Делитесь своими идеями путешествий и черпайте вдохновение в чужих.
-      p.service__tagline А если найдете кого-то близкого по духу — скорее зовите в совместный трип!
+      p.service__tagline
+        | А если найдете кого-то близкого по духу —
+        br
+        | скорее зовите в совместный трип!
       a.section-btn.service__btn(href='#') Подробнее
 
